Modified illustrations and dev team pictures. Added some new todos

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -267,7 +267,7 @@ footer {
         }
       }
 
-      &:nth-child(3n) {
+      &:nth-child(3n), &:nth-child(7) {
         margin-right: 0;
       }
     }
