--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,5 @@
+{{!-- TODO:
+Make this page mobile responsive. --}}
 <footer>
   <div class="footerOut">
     <p class="regFP">MESOC is GDPR compliant. We will not share your information with any third parties unless this is required by law or is otherwise permitted, for instance because you gave your explicit consent.</p>
