--- a/views/partials/nabvar.hbs
+++ b/views/partials/nabvar.hbs
@@ -1,3 +1,5 @@
+{{!-- TODO:
+Make this page mobile responsive. --}}
 <nav>
   <a href="#" class="logoA">
     <img src="/images/mesocLogoBlue.png" alt="mesoc toolkit application logo" class="logo">
