--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,8 +1,5 @@
 {{> nabvar}}
 
-{{!-- TODO:
-Make this page mobile responsive. --}}
-
 <div class="coverImg"></div>
 
 <div class="pageContentContainer">
@@ -80,6 +77,7 @@ Make this page mobile responsive. --}}
       <span class="ucName">Dino Aljević</span>
       <p class="ucRoles">Backend Developer</p>
       <ul class="ucLinks">
+        <li class="ucLi"><a target="_blank" href="https://github.com/dino8890" class="ucA">Github</a></li>
         <li class="ucLi"><a target="_blank" href="https://www.linkedin.com/in/daljevic/" class="ucA">LinkedIn</a></li>
       </ul>
     </div>
