--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,6 +1,6 @@
 {{!-- TODO:
 Make this page mobile responsive. --}}
-<footer>
+{{!-- <footer>
   <div class="footerOut">
     <p class="regFP">MESOC is GDPR compliant. We will not share your information with any third parties unless this is required by law or is otherwise permitted, for instance because you gave your explicit consent.</p>
     <p class="regFP">The website reflects the views only of the authors, and the Commission cannot be held responsible for any use which may be made of the information contained therein.</p>
@@ -16,5 +16,28 @@ Make this page mobile responsive. --}}
     <p class="regFP">from Horizon 2020 - the EU Framework Programme</p>
     <p class="regFP">for Research and Innovation (2014-2020) -</p>
     <p class="regFP">under Grant Agreement n°870935.</p>
+  </div>
+</footer> --}}
+
+<footer>
+  <div class="upperFooter">
+    <div class="footerOut mrFooter">
+      <p class="regFP">MESOC is GDPR compliant. We will not share your information with any third parties unless this is required by law or is otherwise permitted, for instance because you gave your explicit consent.</p>
+      <p class="regFP">The website reflects the views only of the authors, and the Commission cannot be held responsible for any use which may be made of the information contained therein.</p>
+    </div>
+    <div class="footerOut">
+      <img src="/images/euFlag.jpg" alt="flag of european union" class="flagImg">
+      <p class="regFP centerText">MESOC has received funding</p>
+      <p class="regFP centerText">from Horizon 2020 - the EU Framework Programme</p>
+      <p class="regFP centerText">for Research and Innovation (2014-2020) -</p>
+      <p class="regFP centerText">under Grant Agreement n°870935.</p>
+    </div>
+  </div>
+  <div class="lowerFooter">
+    <div class="footerIn">
+      <a href="#" class="footerA">Privacy</a>
+      <a href="#" class="footerA">Conditions</a>
+      <a href="#" class="footerA">User guide</a>
+    </div>
   </div>
 </footer>
