--- a/views/partials/nabvar.hbs
+++ b/views/partials/nabvar.hbs
@@ -7,4 +7,16 @@ Make this page mobile responsive. --}}
   <a href="http://localhost:3000/browse" class="mainA">Browse</a>
   <a href="http://localhost:3000/sign-in" class="secondaryA">Sign in</a>
   <a href="http://localhost:3000/create-account" class="secondaryA">Create account</a>
+
+  <div class="hamburger" onclick="openMobileNav()">
+    <span class="burgerLines"></span>
+  </div>
+
+  <div class="mobileNavContainer">
+    <a href="http://localhost:3000/browse" class="mainAPhone">Browse</a>
+    <a href="http://localhost:3000/sign-in" class="secondaryAPhone">Sign in</a>
+    <a href="http://localhost:3000/create-account" class="secondaryAPhone">Create account</a>
+  </div>
 </nav>
+
+<script src="/js/burgerManager.js"></script>
