DOTENV config setup, prepared the app for deployment - added dotenv in index.js - added prefix at every "src" atrribute in .hbs files for accessing "public" folder - hardcoded the prefix for accesssing "public" folder at ".coverImg" class in main.scss

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -10,7 +10,7 @@
       <p class="whatP">To do so, MESOC adapts and further develops a method for “transition based” impact assessment derived from a previous UNESCO Chair publication, building a structural model of the Societal Dimension of Culture, as defined by one of the strategic objectives of the European Agenda.</p>
       <p class="whatP">The model will be tested within 10 European city pilots: Athens, Barcelona, Cluj, Gent, Issy-les-Moulineaux, Milano, Rijeka, Turku, Valencia and Warsaw.</p>
     </div>
-    <img src="/images/undraw_data_processing_yrrv.svg" alt="illustration of MESOC application collecting and processing documents" class="whatIll">
+    <img src="{{resPrefix}}/images/undraw_data_processing_yrrv.svg" alt="illustration of MESOC application collecting and processing documents" class="whatIll">
   </div>
 
   <div class="cardContainer">
@@ -19,7 +19,7 @@
       <p>Aenean commodo arcu eget elit porttitor, nec congue quam auctor. Morbi aliquam eros purus, ut ornare turpis faucibus id. Aliquam venenatis, est sed lacinia feugiat, nisl ligula cursus leo, sit amet efficitur felis mauris vel neque. Donec viverra eros in commodo porttitor. Donec vestibulum massa eu velit venenatis, quis interdum augue commodo. Nunc volutpat maximus luctus. Sed pretium ipsum eu odio laoreet, a luctus nisi tempus.</p>
       <a href="http://localhost:3000/browse" target="_blank"><button class="cardBtn">Browse</button></a>
     </div>
-    <img src="/images/undraw_windows_q9m0.svg" alt="illustration of multiple MESOC screens" class="cardImg">
+    <img src="{{resPrefix}}/images/undraw_windows_q9m0.svg" alt="illustration of multiple MESOC screens" class="cardImg">
   </div>
   <div class="cardContainer">
     <div class="cardLeft">
@@ -27,7 +27,7 @@
       <p>Aenean commodo arcu eget elit porttitor, nec congue quam auctor. Morbi aliquam eros purus, ut ornare turpis faucibus id. Aliquam venenatis, est sed lacinia feugiat, nisl ligula cursus leo, sit amet efficitur felis mauris vel neque. Donec viverra eros in commodo porttitor. Donec vestibulum massa eu velit venenatis, quis interdum augue commodo. Nunc volutpat maximus luctus. Sed pretium ipsum eu odio laoreet, a luctus nisi tempus.</p>
       <a href="http://localhost:3000/create-account" target="_blank"><button class="cardBtn">Create account</button></a>
     </div>
-    <img src="/images/undraw_uploading_go67.svg" alt="illustration of multiple MESOC screens" class="cardImg">
+    <img src="{{resPrefix}}/images/undraw_uploading_go67.svg" alt="illustration of multiple MESOC screens" class="cardImg">
   </div>
 
   <h1 class="generalH1">Development team</h1>
@@ -37,7 +37,7 @@
     Update links when everyone submit.
     PKB is critical -> none submited --}}
     <div class="userCard">
-      <img src="/images/profile_BozidarKovacic.jpg" alt="Božidar Kovačić" class="ucImg">
+      <img src="{{resPrefix}}/images/profile_BozidarKovacic.jpg" alt="Božidar Kovačić" class="ucImg">
       <span class="ucName">Božidar Kovačić</span>
       <p class="ucRoles">Work Package Leader</p>
       <ul class="ucLinks">
@@ -45,7 +45,7 @@
       </ul>
     </div>
     <div class="userCard">
-      <img src="/images/profile_SandaMartincicIpsic.jpg" alt="Sanda Martinčić - Ipšić" class="ucImg">
+      <img src="{{resPrefix}}/images/profile_SandaMartincicIpsic.jpg" alt="Sanda Martinčić - Ipšić" class="ucImg">
       <span class="ucName">Sanda Martinčić - Ipšić</span>
       <p class="ucRoles">Principal Investigator</p>
       <ul class="ucLinks">
@@ -54,7 +54,7 @@
       </ul>
     </div>
     <div class="userCard">
-      <img src="/images/profile_AntoCabraja.jpg" alt="Anto Čabraja" class="ucImg">
+      <img src="{{resPrefix}}/images/profile_AntoCabraja.jpg" alt="Anto Čabraja" class="ucImg">
       <span class="ucName">Anto Čabraja</span>
       <p class="ucRoles">Technical Supervisor</p>
       <ul class="ucLinks">
@@ -65,7 +65,7 @@
       </ul>
     </div>
     <div class="userCard">
-      <img src="/images/profile_PetarKristijanBogovic.jpg" alt="Petar Kristijan Bogović" class="ucImg">
+      <img src="{{resPrefix}}/images/profile_PetarKristijanBogovic.jpg" alt="Petar Kristijan Bogović" class="ucImg">
       <span class="ucName">Petar Kristijan Bogović</span>
       <p class="ucRoles">Backend Developer, NLP</p>
       <ul class="ucLinks">
@@ -73,7 +73,7 @@
       </ul>
     </div>
     <div class="userCard">
-      <img src="/images/profile_DinoAljevic.jpg" alt="Dino Aljević" class="ucImg">
+      <img src="{{resPrefix}}/images/profile_DinoAljevic.jpg" alt="Dino Aljević" class="ucImg">
       <span class="ucName">Dino Aljević</span>
       <p class="ucRoles">Backend Developer</p>
       <ul class="ucLinks">
@@ -82,7 +82,7 @@
       </ul>
     </div>
     <div class="userCard">
-      <img src="/images/profile_ValentinKuharic.jpg" alt="Valentin Kuharić" class="ucImg">
+      <img src="{{resPrefix}}/images/profile_ValentinKuharic.jpg" alt="Valentin Kuharić" class="ucImg">
       <span class="ucName">Valentin Kuharić</span>
       <p class="ucRoles">Frontend Developer</p>
       <ul class="ucLinks">
@@ -92,7 +92,7 @@
       </ul>
     </div>
     <div class="userCard">
-      <img src="/images/profile_ErikJermanis.jpg" alt="Erik Jermaniš" class="ucImg">
+      <img src="{{resPrefix}}/images/profile_ErikJermanis.jpg" alt="Erik Jermaniš" class="ucImg">
       <span class="ucName">Erik Jermaniš</span>
       <p class="ucRoles">Frontend Developer</p>
       <ul class="ucLinks">
