--- a/views/partials/nabvar.hbs
+++ b/views/partials/nabvar.hbs
@@ -2,7 +2,7 @@
 Make this page mobile responsive. --}}
 <nav>
   <a href="#" class="logoA">
-    <img src="/images/mesocLogoBlue.png" alt="mesoc toolkit application logo" class="logo">
+    <img src="{{resPrefix}}/images/mesocLogoBlue.png" alt="mesoc toolkit application logo" class="logo">
   </a>
   <a href="http://localhost:3000/browse" class="mainA">Browse</a>
   <a href="http://localhost:3000/sign-in" class="secondaryA">Sign in</a>
@@ -19,4 +19,4 @@ Make this page mobile responsive. --}}
   </div>
 </nav>
 
-<script src="/js/burgerManager.js"></script>
+<script src="{{resPrefix}}/js/burgerManager.js"></script>
