--- a/scss/main.scss
+++ b/scss/main.scss
@@ -317,7 +317,7 @@ footer {
   top: 60px;
   z-index: -1;
   left: 0;
-  background: url('/images/coverImg.jpg');
+  background: url('/express_static/images/coverImg.jpg');
   width: 100%;
   height: 500px;
   background-size: cover;
