--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -26,7 +26,7 @@ Make this page mobile responsive. --}}
       <p class="regFP">The website reflects the views only of the authors, and the Commission cannot be held responsible for any use which may be made of the information contained therein.</p>
     </div>
     <div class="footerOut">
-      <img src="/images/euFlag.jpg" alt="flag of european union" class="flagImg">
+      <img src="{{resPrefix}}/images/euFlag.jpg" alt="flag of european union" class="flagImg">
       <p class="regFP centerText">MESOC has received funding</p>
       <p class="regFP centerText">from Horizon 2020 - the EU Framework Programme</p>
       <p class="regFP centerText">for Research and Innovation (2014-2020) -</p>
