Added dotenv support and made navbar links actually point to corrent destination - installed dotnev and loaded config in index.js - gave homepage.hbs a variable {{webapp}} that points to react app

--- a/views/partials/nabvar.hbs
+++ b/views/partials/nabvar.hbs
@@ -4,18 +4,18 @@ Make this page mobile responsive. --}}
   <a href="#" class="logoA">
     <img src="/images/mesocLogoBlue.png" alt="mesoc toolkit application logo" class="logo">
   </a>
-  <a href="http://localhost:3000/browse" class="mainA">Browse</a>
-  <a href="http://localhost:3000/sign-in" class="secondaryA">Sign in</a>
-  <a href="http://localhost:3000/create-account" class="secondaryA">Create account</a>
+  <a href="{{webApp}}/browse" class="mainA">Browse</a>
+  <a href="{{webApp}}/sign-in" class="secondaryA">Sign in</a>
+  <a href="{{webApp}}/create-account" class="secondaryA">Create account</a>
 
   <div class="hamburger" onclick="openMobileNav()">
     <span class="burgerLines"></span>
   </div>
 
   <div class="mobileNavContainer">
-    <a href="http://localhost:3000/browse" class="mainAPhone">Browse</a>
-    <a href="http://localhost:3000/sign-in" class="secondaryAPhone">Sign in</a>
-    <a href="http://localhost:3000/create-account" class="secondaryAPhone">Create account</a>
+    <a href="{{webApp}}/browse" class="mainAPhone">Browse</a>
+    <a href="{{webApp}}/sign-in" class="secondaryAPhone">Sign in</a>
+    <a href="{{webApp}}/create-account" class="secondaryAPhone">Create account</a>
   </div>
 </nav>
 
