added Petar's LinkedIn, added Bozidar's LinkedIn, replaced homepage texts

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -6,9 +6,7 @@
   <h1 class="generalH1">What is MESOC toolkit application?</h1>
   <div class="whatContainer">
     <div class="whatPs">
-      <p class="whatP">MESOC is a Research and Innovation Action designed to propose, test and validate an innovative and original approach to measuring the societal value and impacts of culture and cultural policies and practices, related to three crossover themes of the new European Agenda for Culture: 1) Health and Wellbeing, 2) Urban and Territorial Renovation and 3) People’s Engagement and Participation. The global aim is to respond to the challenge posed by the H2020 Call (“To develop new perspectives and improved methodologies for capturing the wider societal value of culture, including but also beyond its economic impact”).</p>
-      <p class="whatP">To do so, MESOC adapts and further develops a method for “transition based” impact assessment derived from a previous UNESCO Chair publication, building a structural model of the Societal Dimension of Culture, as defined by one of the strategic objectives of the European Agenda.</p>
-      <p class="whatP">The model will be tested within 10 European city pilots: Athens, Barcelona, Cluj, Gent, Issy-les-Moulineaux, Milano, Rijeka, Turku, Valencia and Warsaw.</p>
+      <p class="whatP">MESOC Toolkit is a georeferenced visualization tool for assessing the value and impacts of cultural policies and practices. It assesses the performance of European regions and cities under the perspective of societal value creation and the impact transmission mechanisms of observed cultural policies and practices according to MESOC matrix. The MESOC matrix cross-references cultural domains (introduced by the EUROSTAT) against the three pillars of the structural model. Ten cultural domains are Heritage, Archives, Libraries, Book and Press, Visual Arts, Performing Arts, Audiovisual and Multimedia, Architecture, Advertising and Art crafts. Three pillars of the structural model stem from three crossover themes of the new European Agenda for Culture: Health and Wellbeing, Urban and Territorial Renovation and People’s Engagement and Participation. In each of 30 cells of MESOC matrix (at the intersection between rows and columns), we analyze possible transition variables. The transition variable establishes the mechanism to measure the transition or impact generation and transmission pathways associated to each of ten cultural domains. The MESOC map georeferences two types of documents: pilot (marked red) and scientific (marked blue) studies.</p>
     </div>
     <img src="/images/undraw_data_processing_yrrv.svg" alt="illustration of MESOC application collecting and processing documents" class="whatIll">
   </div>
@@ -16,7 +14,10 @@
   <div class="cardContainer">
     <div class="cardLeft">
       <h2 class="generalH2">Browse results from all over the Europe</h2>
-      <p>Aenean commodo arcu eget elit porttitor, nec congue quam auctor. Morbi aliquam eros purus, ut ornare turpis faucibus id. Aliquam venenatis, est sed lacinia feugiat, nisl ligula cursus leo, sit amet efficitur felis mauris vel neque. Donec viverra eros in commodo porttitor. Donec vestibulum massa eu velit venenatis, quis interdum augue commodo. Nunc volutpat maximus luctus. Sed pretium ipsum eu odio laoreet, a luctus nisi tempus.</p>
+      <p>Additionally, MESOC Toolkit enables the semantic search of the pilot and scientific studies.
+First, it recommends similar documents nested into the same cell of the MESOC matrix.
+Second, it analyzes documents according to the semantics of transitional variables and recommends the set of relevant variables for the current analysis.</p>
+<p>Third, the semantic search can explain why a specific variable is inferred for the analyzed document, according to the MESOC knowledge representation model.</p>
       <a href="http://localhost:3000/browse" target="_blank"><button class="cardBtn">Browse</button></a>
     </div>
     <img src="/images/undraw_windows_q9m0.svg" alt="illustration of multiple MESOC screens" class="cardImg">
@@ -24,7 +25,7 @@
   <div class="cardContainer">
     <div class="cardLeft">
       <h2 class="generalH2">Submit your own files for analysis</h2>
-      <p>Aenean commodo arcu eget elit porttitor, nec congue quam auctor. Morbi aliquam eros purus, ut ornare turpis faucibus id. Aliquam venenatis, est sed lacinia feugiat, nisl ligula cursus leo, sit amet efficitur felis mauris vel neque. Donec viverra eros in commodo porttitor. Donec vestibulum massa eu velit venenatis, quis interdum augue commodo. Nunc volutpat maximus luctus. Sed pretium ipsum eu odio laoreet, a luctus nisi tempus.</p>
+      <p>In the MESOC Toolkit user can upload his documents in .txt or .pdf format. The documents written in the English language are analyzed in the original form, while other languages will be translated into English by statistical machine translation service. For each document, user specifies the location for georeferencing of his document.</p>
       <a href="http://localhost:3000/create-account" target="_blank"><button class="cardBtn">Create account</button></a>
     </div>
     <img src="/images/undraw_uploading_go67.svg" alt="illustration of multiple MESOC screens" class="cardImg">
@@ -42,6 +43,7 @@
       <p class="ucRoles">Work Package Leader</p>
       <ul class="ucLinks">
         <li class="ucLi"><a target="_blank" href="https://portal.uniri.hr/portfelj/1506" class="ucA">UNIRI portfolio</a></li>
+        <li class="ucLi"><a target="_blank" href="https://www.linkedin.com/in/bo%C5%BEidar-kova%C4%8Di%C4%87-96275118/" class="ucA">LinkedIn</a></li>
       </ul>
     </div>
     <div class="userCard">
@@ -69,7 +71,7 @@
       <span class="ucName">Petar Kristijan Bogović</span>
       <p class="ucRoles">Backend Developer, NLP</p>
       <ul class="ucLinks">
-        <li class="ucLi"><a target="_blank" href="#" class="ucA">Placeholder</a></li>
+        <li class="ucLi"><a target="_blank" href="https://www.linkedin.com/in/pkbogovic/" class="ucA">LinkedIn</a></li>
       </ul>
     </div>
     <div class="userCard">
