- Added sanda's website, homepage cards now have working buttons - NOTE => logo redirect to "/" doesn't work yet, will be fixed later

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -18,7 +18,7 @@
 First, it recommends similar documents nested into the same cell of the MESOC matrix.
 Second, it analyzes documents according to the semantics of transitional variables and recommends the set of relevant variables for the current analysis.</p>
 <p>Third, the semantic search can explain why a specific variable is inferred for the analyzed document, according to the MESOC knowledge representation model.</p>
-      <a href="http://localhost:3000/browse" target="_blank"><button class="cardBtn">Browse</button></a>
+      <a href="{{webApp}}/browse" target="_blank"><button class="cardBtn">Browse</button></a>
     </div>
     <img src="/images/undraw_windows_q9m0.svg" alt="illustration of multiple MESOC screens" class="cardImg">
   </div>
@@ -26,7 +26,7 @@ Second, it analyzes documents according to the semantics of transitional variabl
     <div class="cardLeft">
       <h2 class="generalH2">Submit your own files for analysis</h2>
       <p>In the MESOC Toolkit user can upload his documents in .txt or .pdf format. The documents written in the English language are analyzed in the original form, while other languages will be translated into English by statistical machine translation service. For each document, user specifies the location for georeferencing of his document.</p>
-      <a href="http://localhost:3000/create-account" target="_blank"><button class="cardBtn">Create account</button></a>
+      <a href="{{webApp}}/create-account" target="_blank"><button class="cardBtn">Create account</button></a>
     </div>
     <img src="/images/undraw_uploading_go67.svg" alt="illustration of multiple MESOC screens" class="cardImg">
   </div>
@@ -53,6 +53,7 @@ Second, it analyzes documents according to the semantics of transitional variabl
       <ul class="ucLinks">
         <li class="ucLi"><a target="_blank" href="http://portal.uniri.hr/Portfelj/761" class="ucA">UNIRI portfolio</a></li>
         <li class="ucLi"><a target="_blank" href="https://www.linkedin.com/in/sandamartincic/" class="ucA">LinkedIn</a></li>
+        <li class="ucLi"><a target="_blank" href="http://langnet.uniri.hr/" class="ucA">Website</a></li>
       </ul>
     </div>
     <div class="userCard">
