--- a/views/partials/nabvar.hbs
+++ b/views/partials/nabvar.hbs
@@ -1,7 +1,7 @@
 {{!-- TODO:
 Make this page mobile responsive. --}}
 <nav>
-  <a href="#" class="logoA">
+  <a href="{{expressDomain}}" class="logoA">
     <img src="/images/mesocLogoBlue.png" alt="mesoc toolkit application logo" class="logo">
   </a>
   <a href="{{webApp}}/browse" class="mainA">Browse</a>
