Commented user guide link in footer partial

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -37,7 +37,7 @@ Make this page mobile responsive. --}}
     <div class="footerIn">
       <a href="/privacy" class="footerA">Privacy</a>
       <a href="/termsandconditions" class="footerA">Conditions</a>
-      <a href="#" class="footerA">User guide</a>
+      <!-- <a href="#" class="footerA">User guide</a> -->
     </div>
   </div>
 </footer>
