Fixing bugs - fixed visual bug on link tags in "Development team" section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -471,6 +471,7 @@ footer {
         margin-top: 1.6em;
 
         .ucLi {
+          margin: 0;
           margin-bottom: .65em;
 
           .ucA {
